public/v/release-4.6/_sources/repositories_and_packages/index.rst.txt
=========================
Repositories and Packages
=========================

Use this index to find the Isaac ROS packages you need and examples on how to use them.

.. list-table::
    :header-rows: 1

    * - Repository
      - Packages
      - Description

    * - :doc:`AprilTag </repositories_and_packages/isaac_ros_apriltag/index>`
      - | :doc:`isaac_ros_apriltag </repositories_and_packages/isaac_ros_apriltag/isaac_ros_apriltag/index>`
      - CUDA-accelerated AprilTag detection and pose estimation.

    * - :doc:`Benchmark </repositories_and_packages/isaac_ros_benchmark/index>`
      - | :doc:`isaac_ros_benchmark </repositories_and_packages/isaac_ros_benchmark/isaac_ros_benchmark/index>`
      - ROS 2 package which adds on top of ``ros2_benchmark`` package plugins, configuration files, and scripts to perform benchmarking on graphs of nodes using Isaac ROS.

    * - :doc:`Cloud Control </repositories_and_packages/isaac_ros_cloud_control/index>`
      - | :doc:`isaac_ros_scene_recorder </repositories_and_packages/isaac_ros_cloud_control/isaac_ros_scene_recorder/index>`
        | :doc:`isaac_ros_vda5050_client </repositories_and_packages/isaac_ros_cloud_control/isaac_ros_mission_client/index>`
        | :doc:`vda5050_action_handler </repositories_and_packages/isaac_ros_cloud_control/vda5050_action_handler/index>`
      - Receives tasks and actions from the fleet management service and updates progress, state, and errors

    * - :doc:`Common </repositories_and_packages/isaac_ros_common/index>`
      - --
      - Common utilities, packages, scripts, and testing infrastructure for Isaac ROS packages.

    * - :doc:`Compression </repositories_and_packages/isaac_ros_compression/index>`
      - | :doc:`isaac_ros_h264_decoder </repositories_and_packages/isaac_ros_compression/isaac_ros_h264_decoder/index>`
        | :doc:`isaac_ros_h264_encoder </repositories_and_packages/isaac_ros_compression/isaac_ros_h264_encoder/index>`
      - NVIDIA-accelerated data compression

    * - :doc:`cuMotion </repositories_and_packages/isaac_ros_cumotion/index>`
      - | :doc:`isaac_ros_cumotion </repositories_and_packages/isaac_ros_cumotion/isaac_ros_cumotion/index>`
        | :doc:`isaac_ros_cumotion_moveit </repositories_and_packages/isaac_ros_cumotion/isaac_ros_cumotion_moveit/index>`
      - CUDA-accelerated motion generation for robot arms

    * - :doc:`Data Tools </repositories_and_packages/isaac_ros_data_tools/index>`
      - | :doc:`isaac_ros_mcap_lerobot_converter </repositories_and_packages/isaac_ros_data_tools/isaac_ros_mcap_lerobot_converter/index>`
      - Tools for inspecting and converting data captured through Isaac ROS pipelines.

    * - :doc:`Deploy </repositories_and_packages/isaac_ros_deploy/index>`
      - | isaac_deploy_core
        | isaac_ros_deploy_ros2_control
        | isaac_ros_deploy_converters
        | isaac_ros_deploy_bringup
      - Deploy neural network policies (reinforcement learning and imitation learning) trained in PyTorch on real and simulated robots.

    * - :doc:`DNN Inference </repositories_and_packages/isaac_ros_dnn_inference/index>`
      - | :doc:`isaac_ros_dnn_image_encoder </repositories_and_packages/isaac_ros_dnn_inference/isaac_ros_dnn_image_encoder/index>`
        | :doc:`isaac_ros_tensor_rt </repositories_and_packages/isaac_ros_dnn_inference/isaac_ros_tensor_rt/index>`
        | :doc:`isaac_ros_triton </repositories_and_packages/isaac_ros_dnn_inference/isaac_ros_triton/index>`
        | :doc:`isaac_ros_tensor_proc </repositories_and_packages/isaac_ros_dnn_inference/isaac_ros_tensor_proc/index>`
      - NVIDIA-accelerated DNN model inference ROS 2 packages using NVIDIA Triton/TensorRT for both Jetson and x86_64 with CUDA-capable GPU

    * - :doc:`DNN Stereo Depth </repositories_and_packages/isaac_ros_dnn_stereo_depth/index>`
      - | :doc:`isaac_ros_ess </repositories_and_packages/isaac_ros_dnn_stereo_depth/isaac_ros_ess/index>`
        | :doc:`isaac_ros_foundationstereo </repositories_and_packages/isaac_ros_dnn_stereo_depth/isaac_ros_foundationstereo/index>`
        | :doc:`isaac_ros_dnn_stereo_decoder </repositories_and_packages/isaac_ros_dnn_stereo_depth/isaac_ros_dnn_stereo_decoder/index>`
      - Deep learned stereo disparity estimation

    * - :doc:`Image Pipeline </repositories_and_packages/isaac_ros_image_pipeline/index>`
      - | :doc:`isaac_ros_image_pipeline </repositories_and_packages/isaac_ros_image_pipeline/isaac_ros_image_pipeline/index>`
        | :doc:`isaac_ros_image_proc </repositories_and_packages/isaac_ros_image_pipeline/isaac_ros_image_proc/index>`
        | :doc:`isaac_ros_stereo_image_proc </repositories_and_packages/isaac_ros_image_pipeline/isaac_ros_stereo_image_proc/index>`
      - NVIDIA-accelerated ROS 2 packages for camera image processing.

    * - :doc:`Image Segmentation </repositories_and_packages/isaac_ros_image_segmentation/index>`
      - | :doc:`isaac_ros_unet </repositories_and_packages/isaac_ros_image_segmentation/isaac_ros_unet/index>`
        | :doc:`isaac_ros_segformer </repositories_and_packages/isaac_ros_image_segmentation/isaac_ros_segformer/index>`
        | :doc:`isaac_ros_segment_anything </repositories_and_packages/isaac_ros_image_segmentation/isaac_ros_segment_anything/index>`
        | :doc:`isaac_ros_segment_anything2 </repositories_and_packages/isaac_ros_image_segmentation/isaac_ros_segment_anything2/index>`
      - NVIDIA-accelerated, deep learned semantic image segmentation

    * - :doc:`Jetson </repositories_and_packages/isaac_ros_jetson/index>`
      - | :doc:`isaac_ros_jetson_stats </repositories_and_packages/isaac_ros_jetson/isaac_ros_jetson_stats/index>`
        | :doc:`isaac_ros_jetson_stats_services </repositories_and_packages/isaac_ros_jetson/isaac_ros_jetson_stats_services/index>`
      - Utility tools for NVIDIA Jetson

    * - :doc:`Mapping and Localization </repositories_and_packages/isaac_ros_mapping_and_localization/index>`
      - | :doc:`isaac_ros_visual_global_localization </repositories_and_packages/isaac_ros_mapping_and_localization/isaac_ros_visual_global_localization/index>`
        | :doc:`isaac_mapping_ros </repositories_and_packages/isaac_ros_mapping_and_localization/isaac_mapping_ros/index>`
        | :doc:`isaac_ros_visual_mapping </repositories_and_packages/isaac_ros_mapping_and_localization/isaac_ros_visual_mapping/index>`
        | :doc:`isaac_ros_occupancy_grid_localizer </repositories_and_packages/isaac_ros_mapping_and_localization/isaac_ros_occupancy_grid_localizer/index>`
        | :doc:`isaac_ros_pointcloud_utils </repositories_and_packages/isaac_ros_mapping_and_localization/isaac_ros_pointcloud_utils/index>`
      - ROS Packages for mapping and localization

    * - :doc:`NITROS </repositories_and_packages/isaac_ros_nitros/index>`
      - | :doc:`isaac_ros_nitros </repositories_and_packages/isaac_ros_nitros/isaac_ros_nitros/index>`
        | :doc:`isaac_ros_nitros_bridge </repositories_and_packages/isaac_ros_nitros/isaac_ros_nitros_bridge/index>`
        | :doc:`isaac_ros_nitros_type </repositories_and_packages/isaac_ros_nitros/isaac_ros_nitros_type/index>`
      - NVIDIA Isaac Transport for ROS package for hardware-acceleration friendly movement of messages

    * - :doc:`Nvblox </repositories_and_packages/isaac_ros_nvblox/index>`
      - | :doc:`isaac_ros_nvblox </repositories_and_packages/isaac_ros_nvblox/isaac_ros_nvblox/index>`
      - NVIDIA-accelerated 3D scene reconstruction and Nav2 local costmap provider using nvblox

    * - :doc:`Object Detection </repositories_and_packages/isaac_ros_object_detection/index>`
      - | :doc:`isaac_ros_detectnet </repositories_and_packages/isaac_ros_object_detection/isaac_ros_detectnet/index>`
        | :doc:`isaac_ros_grounding_dino </repositories_and_packages/isaac_ros_object_detection/isaac_ros_grounding_dino/index>`
        | :doc:`isaac_ros_rtdetr </repositories_and_packages/isaac_ros_object_detection/isaac_ros_rtdetr/index>`
        | :doc:`isaac_ros_yolov8 </repositories_and_packages/isaac_ros_object_detection/isaac_ros_yolov8/index>`
      - Deep learning model support for object detection including DetectNet

    * - :doc:`Physical AI </repositories_and_packages/isaac_ros_physical_ai/index>`
      - | :doc:`isaac_ros_unitree_g1_teleop_bringup </repositories_and_packages/isaac_ros_physical_ai/isaac_ros_unitree_g1_teleop_bringup/index>`
      - Application-level bringup for whole-body control and teleoperation on humanoid robots.

    * - :doc:`Pose Estimation </repositories_and_packages/isaac_ros_pose_estimation/index>`
      - | :doc:`isaac_ros_centerpose </repositories_and_packages/isaac_ros_pose_estimation/isaac_ros_centerpose/index>`
        | :doc:`isaac_ros_dope </repositories_and_packages/isaac_ros_pose_estimation/isaac_ros_dope/index>`
        | :doc:`isaac_ros_foundationpose </repositories_and_packages/isaac_ros_pose_estimation/isaac_ros_foundationpose/index>`
      - Deep learned, NVIDIA-accelerated 3D object pose estimation

    * - :doc:`SIPL Camera </repositories_and_packages/isaac_ros_sipl_camera/index>`
      - | :doc:`isaac_ros_sipl_camera </repositories_and_packages/isaac_ros_sipl_camera/isaac_ros_sipl_camera/index>`
      - ROS 2 camera driver for NVIDIA SIPL cameras with zero-copy GPU-accelerated image publishing through NITROS.

    * - :doc:`Teleop </repositories_and_packages/isaac_ros_teleop/index>`
      - | :doc:`isaac_ros_teleop </repositories_and_packages/isaac_ros_teleop/isaac_ros_teleop/index>`
      - ROS 2 teleoperation solution using Isaac Teleop for data collection.

    * - :doc:`Visual SLAM </repositories_and_packages/isaac_ros_visual_slam/index>`
      - | :doc:`isaac_ros_visual_slam </repositories_and_packages/isaac_ros_visual_slam/isaac_ros_visual_slam/index>`
        | :doc:`isaac_ros_visual_slam_interfaces </repositories_and_packages/isaac_ros_visual_slam/isaac_ros_visual_slam_interfaces/index>`
      - Visual odometry package based on NVIDIA-accelerated NVIDIA cuVSLAM library with world class quality and performance.

.. toctree::
    :hidden:
    :glob:

    ./*/index
